infer/tests/codetoanalyze/objc/errors/npe/NPD_core_foundation.h
/*
 * Copyright (c) 2014 - Facebook.
 * All rights reserved.
 */

#import <Foundation/NSObject.h>
#import <UIKit/UIKit.h>

@interface NullDeref : NSObject

@property UIView *backgroundCoveringView;
@property UIView *attachmentContainerView;

@end
